Deletado HTMLs não utilizados, adicionado exec da SP atualizaEstoque e Adicionado novo campo no AddProduto para mostrar o estoque

--- a/SistemaDoLeoBlazor.WEB/Pages/Login.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Login.razor
@@ -61,12 +61,16 @@
     {
         operador = new OperadorDTO
         {
-            id = 0,
-            senha = "",
+            id = 1,
+            senha = "5555",
             nome = string.Empty,
             admin = false,
             inativo = false
         };
+
+        operadorGet = operador;
+
+        await acessaSistema();
     }
 
     private async void validarOperador()
