--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -9,6 +9,11 @@
 @using SistemaDoLeoBlazor.WEB
 @using SistemaDoLeoBlazor.WEB.Shared
 @using SistemaDoLeoBlazor.MODELS.OperadorDTOs
+@using SistemaDoLeoBlazor.MODELS.ClienteDTO
+@using SistemaDoLeoBlazor.MODELS.CategoriaDTO
+@using SistemaDoLeoBlazor.MODELS.FormaPgtoDTO
+@using SistemaDoLeoBlazor.MODELS.PedidoDTO
+@using SistemaDoLeoBlazor.MODELS.ProdutoDTO
 @using SistemaDoLeoBlazor.WEB.Services.OperadorService.OperadorService
 @using SistemaDoLeoBlazor.WEB.Services.ProximoRegistroService
 @using SistemaDoLeoBlazor.WEB.Toaster
