--- a/SistemaDoLeoBlazor.WEB/Pages/CadFormaPgto.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadFormaPgto.razor
@@ -29,7 +29,8 @@ else
                                                        name="Cod" disabled="@stsCodFormaPgto" @bind-value="@formaPgto.id" @bind-value:event="oninput" @onkeydown="OnKeyDownTxtID">
                                             </div>
                                             <div class="col-md-6">
-                                                <button class="btn btn-primary" type="button" tabindex="-1" disabled="@stsBtnPesquisa">Pesquisar</button>
+                                                <button class="btn btn-primary" type="button" tabindex="-1" disabled="@stsBtnPesquisa"
+                                                        @onclick="(() => openPesquisaDialog())">Pesquisar</button>
                                             </div>
                                         </div>
                                     </div>
@@ -100,5 +101,10 @@ else
     @if (DeleteDialogOpen)
     {
         <ConfirmModal Titulo="Exlusão de Categoria" Texto="@mensagem" OnClose="@OnDeleteDialogClose"></ConfirmModal>
+    }
+
+    @if (pesquisaDialogOpen)
+    {
+        <Consulta tipo="Consulta.tipoConsultas.formaPgto" inativos="pesquisaInativos" idReturn="@onPesquisaDialogClose"></Consulta>
     }
 }
