--- a/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/CadOperador.razor
@@ -192,6 +192,6 @@ else if (Operador is not null)
 
     @if (pesquisaDialogOpen)
     {
-        <Consulta tipo="Consulta.tipoConsultas.operador" idReturn="@onPesquisaDialogClose"></Consulta>
+        <Consulta tipo="Consulta.tipoConsultas.operador" inativos="pesquisaInativos" idReturn="@onPesquisaDialogClose"></Consulta>
     }
 }
