--- a/SistemaDoLeoBlazor.WEB/_Imports.razor
+++ b/SistemaDoLeoBlazor.WEB/_Imports.razor
@@ -23,3 +23,4 @@
 @using SistemaDoLeoBlazor.WEB.Services.ProdutoService
 @using SistemaDoLeoBlazor.WEB.Services.CLienteService
 @using SistemaDoLeoBlazor.WEB.Services.PedidoService
+@using SistemaDoLeoBlazor.WEB.Relatorios
