--- a/SistemaDoLeoBlazor.WEB/Pages/Index.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Index.razor
@@ -1,48 +1,38 @@
 ﻿@page "/"
 @inject IOperadorLocalService service
 
-<PageTitle>Index</PageTitle>
+<div class="container">
+    <img src="logo.jpeg" alt="Minha Imagem" class="centered-image" />
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
-<div class="m-2 p-2">
-    @* <button class="btn btn-primary" @onclick="AddToast()">Add a Toast</button> *@
+    <div class="overlay-text">
+        <h1>Sistema do Leo 3.0</h1>
+    </div>
 </div>
 
-<br />
-
-<div class="m-2 p-2">
-    <button class="btn btn-primary" @onclick="IniciarSessao">Iniciar Sessão</button>
-</div>
-
-<div class="m-2 p-2">
-    <button class="btn btn-primary" @onclick="PegarDadosSessao">Get Sessão</button>
-</div>
-
-<div class="m-2 p-2">
-    <button class="btn btn-primary" @onclick="ApagarDados">Apagar Sessão</button>
-</div>
-
-@if(telas is not null)
-{
-    foreach(var tela in telas)
-    {
-        <a>id: @tela.id  -  </a>
-        <a>nome: @tela.nome  -  </a>
-        <a>ativo: @tela.ativo  -  </a>
-        <a>novo: @tela.novo  -  </a>
-        <a>editar: @tela.editar  -  </a>
-        <a>excluir: @tela.excluir  -  </a>
-        <a>operador: @tela.idOperador  -  </a>
-        <a>id tela: @tela.idTela</a>
-
-        <br />
+<style>
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh; /* Isso garante que a imagem seja centralizada verticalmente na tela inteira */
     }
-}
 
+    .centered-image {
+        max-width: 80%;
+        max-height: 80vh;
+        z-index: 1; /* Certifique-se de que a imagem fique em frente ao texto */
+    }
+
+    .overlay-text {
+        position: absolute;
+        top: 12%; /* Posiciona o texto no centro vertical da imagem */
+        left: 56%; /* Posiciona o texto no centro horizontal da imagem */
+        transform: translate(-50%, -50%); /* Centraliza o texto corretamente */
+        text-align: center;
+        color: white; /* Define a cor do texto */
+        z-index: 2; /* Certifique-se de que o texto fique em frente à imagem */
+    }
+</style>
 @code {
     [Inject] private ToasterService? _toasterService { get; set; }
     [Inject] private NavigationManager? NavigationManager { get; set; }
@@ -55,12 +45,9 @@ Welcome to your new app.
 
     protected override async Task OnInitializedAsync()
     {
-        //await IniciarSessao();
         await getOperadorSession();
         await validarAcesso();
     }
-
-
 
     private async Task getOperadorSession()
     {
@@ -80,27 +67,5 @@ Welcome to your new app.
         {
             NavigationManager.NavigateTo("/login"); // ALTERAR PARA TELA DE LOGIN
         }
-    }
-
-    private async Task IniciarSessao()
-    {
-        await service.SetSessao(1);
-
-        AddToast("Sessão", "Sessão Criada com sucesso");
-    }
-
-    private async void PegarDadosSessao()
-    {
-        // operador = await service.GetSessaoOperador();
-        // telas = await service.GetSessaoTelas();
-
-        AddToast("Sessão", "Sessão Get com sucesso");
-    }
-
-
-
-    private async void ApagarDados()
-    {
-        await service.LimparSessao();
     }
 }
