--- a/SistemaDoLeoBlazor.WEB/Pages/Login.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Login.razor
@@ -10,21 +10,17 @@
                 <h4 class="text-dark mb-4" style="font-size: 30px;">Login</h4>
             </div>
 
-            @if (@erro != string.Empty)
-            {
-                <div class="alert alert-danger" role="alert">
-                    @erro
-                </div>
-            }
-
             <form class="user" @onsubmit="acessaSistema">
                 <div style="margin-bottom: 15px;">
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Operador:</h4>
+                            @if (@erro != string.Empty)
+                            {
+                                <a style="color:red;">@erro</a>
+                            }
                             <input class="form-control" type="number" required="" name="txtOperador" 
-                                   placeholder="Informe seu Operador" @bind-value="@operador.id" @bind-value:event="oninput"
-                                   @onblur="acessaSistema">
+                                   placeholder="Informe seu Operador" @bind-value="@operador.id" @bind-value:event="oninput" autofocus="@true">
                             @if (operador.nome != string.Empty)
                             {
                                 <div class="alert alert-success" role="alert">
@@ -33,8 +29,7 @@
                             }
                             <h4 class="card-title" style="margin-top: 15px;">Senha:</h4>
                             <input class="form-control" type="password" required="" maxlength="20" name="txtSenha" 
-                                   placeholder="Infome sua Senha" @bind-value="@operador.senha" @bind-value:event="oninput"
-                                   @onblur=acessaSistema>
+                                   placeholder="Infome sua Senha" @bind-value="@operador.senha" @bind-value:event="oninput">
                         </div>
                     </div>
                 </div>
@@ -42,13 +37,22 @@
                 <div class="row">
                     <div class="col-md-4" style="margin-left: 283px;">
                         <button class="btn btn-primary" type="submit" style="height: 53px;width: 119.3594px;font-size: 20px;"
-                        >Acessar</button>
+                                @onclick="acessaSistema">Acessar</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
+
+<style>
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+</style>
 
 @code{
     [Inject] private NavigationManager? NavigationManager { get; set; }
@@ -61,16 +65,14 @@
     {
         operador = new OperadorDTO
         {
-            id = 1,
-            senha = "5555",
+            id = 0,
+            senha = "",
             nome = string.Empty,
             admin = false,
             inativo = false
         };
 
         operadorGet = operador;
-
-        await acessaSistema();
     }
 
     private async Task validarOperador()
