--- a/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
@@ -12,8 +12,6 @@
 }
 else
 {
-    <button type="button" class="btn btn-success" @onclick="@(p => OpenNewTab("report.pdf"))"> PDF </button>
-
     <div class="row d-flex d-xl-flex justify-content-center justify-content-xl-center">
         <div class="col-sm-12 col-lg-10 col-xl-9 col-xxl-7 bg-white shadow-lg" style="border-radius: 5px;margin-top: 60px;">
             <div class="p-5">
@@ -73,12 +71,19 @@ else
                     <div class="mb-3">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Cliente</h4><!-- Start: 1 Row 3 Columns -->
+                                @if (pedido.tipoOperacao.Equals(tipoVenda))
+                                {
+                                    <h4 class="card-title">Cliente</h4><!-- Start: 1 Row 3 Columns -->
+                                }
+                                else
+                                {
+                                    <h4 class="card-title">Fornecedor</h4><!-- Start: 1 Row 3 Columns -->
+                                }
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-4" style="width: 113.188px;">
                                             <input class="form-control form-control-user" type="number" style="width: 100px;" name="Cod Pedido" required=""
-                                                   disabled="@stsCliente" @bind="pedido.clienteId" @onblur="getCliente">
+                                                   disabled="@stsCliente" @bind="pedido.clienteId" @onblur="getCliente" @onkeydown="OnKeyDownTxtCliente">
                                         </div>
                                         <div class="col-md-4" style="width: 115.188px;">
                                             <button class="btn btn-primary" type="button" style="margin-left: 0px;" tabindex="-1" disabled="@stsBtnPesquisaCliente"
@@ -102,7 +107,7 @@ else
                                     <div class="row">
                                         <div class="col-md-4" style="width: 113.188px;">
                                             <input class="form-control form-control-user" type="number" style="width: 100px;" name="Cod Forma PGTO"
-                                                   required="" disabled="@stsFormaPgto" @bind="@pedido.formaPgtoId" @onblur="getFormaPgto">
+                                                   required="" disabled="@stsFormaPgto" @bind="@pedido.formaPgtoId" @onblur="getFormaPgto" @onkeydown="OnKeyDownTxtPgto">
                                         </div>
                                         <div class="col-md-4" style="width: 115.188px;">
                                             <button class="btn btn-primary" type="button" style="margin-left: 0px;" tabindex="-1" 
@@ -117,6 +122,41 @@ else
                             </div>
                         </div>
                     </div><!-- End: Forma PGTO -->
+                    <!-- Start: Valores -->
+                    <div class="mb-3">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Valor R$</h4>
+                                        <div class="col-md-6" style="width: 121.641px;">
+                                            <input class="form-control" type="number" step=".01" style="width: 153.266px;" disabled="@stsDesconto"
+                                                   @bind="pedido.valor" @onblur="recalcularValores">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-body" style="height: 106.7969px;">
+                                        <h4 class="card-title">Desconto %</h4>
+                                        <input class="form-control" type="number" step=".01" style="width: 153.266px;" disabled="@stsDesconto" 
+                                               @bind="pedido.desconto" @onblur="recalcularValores">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">Total R$</h4>
+                                        <input class="form-control" type="number" step=".01" style="width: 153.266px;" readonly="@true" disabled="@stsTotal" @bind="pedido.total"
+                                               @onblur="recalcularValores">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><!-- End: Valores -->
+
                     <hr><!-- Start: Botões -->
                     <div class="row">
                         <!-- Start: Novo -->
@@ -155,8 +195,23 @@ else
                                 <div class="card-header d-flex flex-wrap justify-content-center align-items-center justify-content-sm-between gap-3">
                                     <h5 class="display-6 text-nowrap text-capitalize mb-0">Itens</h5>
                                     <div class="row" style="margin-top: 5px;margin-bottom: 0px;">
+                                        <!--Start: Atualizar Total Pedido-->
+                                        <div class="col-md-3" style="height: 45px;width: 119px;">
+                                            <!-- Start: Atualizar Total Pedido -->
+                                            <button class="btn btn-primary " data-bss-hover-animate="pulse" type="button"
+                                                    style="height: 39px;background: rgb(74,170,15);" tabindex="-1" title="Restaura o valor do Pedido para o Total dos Itens"
+                                                    disabled="@stsBtnAttValor" @onclick="(() => resetarValorPedido())">
+                                                Att. Valor
+                                            </button><!-- End: Atualizar Total Pedido -->
+                                        </div><!-- End: Atualizar Total Pedido -->
+
+                                        <!--Start: Impressão Pedido-->
+                                        <div class="col-md-3" style="height: 45px;width: 119px;">
+                                            <button type="button" tabindex="-1" class="btn btn-success" @onclick="@(p => OpenNewTab("report.pdf"))"> PDF </button>
+                                        </div><!-- End: Impressão Pedido -->
+
                                         <!-- Start: Novo -->
-                                        <div class="col-md-3" style="height: 45px;width: 119px;margin-left: 248px;">
+                                        <div class="col-md-3" style="height: 45px;width: 119px;margin-left: 118px;">
                                             <!-- Start: Novo -->
                                             <button class="btn btn-primary d-block btn-user w-100" data-bss-hover-animate="pulse" id="submitBtn-4" type="button"
                                                     style="height: 39px;background: rgb(74,170,15);border-radius: 60px;" tabindex="-1"
