--- a/SistemaDoLeoBlazor.WEB/Shared/NavMenu.razor
+++ b/SistemaDoLeoBlazor.WEB/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SistemaDoLeoBlazor.WEB</a>
+        <a class="navbar-brand" href="">Sistema do Leo 3.0</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,12 +11,12 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
         @if(OperadorLogadoTelas is not null)
         {
             @foreach (var tela in OperadorLogadoTelas)
@@ -31,33 +31,6 @@
                 }
             }
         }
-        
-
-        @* <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="CadOperador">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Operador
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="CadCategoria">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Categoria
-            </NavLink>
-        </div> *@
     </nav>
 </div>
 
