--- a/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
+++ b/SistemaDoLeoBlazor.WEB/Pages/Pedido.razor
@@ -207,7 +207,7 @@ else
 
                                         <!--Start: Impressão Pedido-->
                                         <div class="col-md-3" style="height: 45px;width: 119px;">
-                                            <button type="button" tabindex="-1" class="btn btn-success" @onclick="@(p => OpenNewTab("report.pdf"))"> PDF </button>
+                                            <button type="button" tabindex="-1" class="btn btn-success" disabled="@stsBtnPdf" @onclick="@(p => OpenNewTab("report.pdf"))"> PDF </button>
                                         </div><!-- End: Impressão Pedido -->
 
                                         <!-- Start: Novo -->
